final fragment java code to send the data Activity to fragment using fragment method

--- a/app/src/main/res/layout/fragment_receiver.xml
+++ b/app/src/main/res/layout/fragment_receiver.xml
@@ -2,13 +2,35 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#FFEB3B"
     android:layout_height="match_parent"
     tools:context=".ReceiverFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="100dp"
+       android:orientation="vertical">
+
+       <TextView
+           android:layout_width="300dp"
+           android:layout_height="wrap_content"
+           android:hint="Email"
+           android:layout_marginTop="24dp"
+           android:layout_gravity="center_horizontal"
+           android:id="@+id/received_email"/>
+
+       <Button
+           android:layout_width="300dp"
+           android:layout_height="wrap_content"
+           android:id="@+id/show_email"
+           android:text="Show email"
+           android:layout_gravity="center_horizontal"
+           android:layout_marginTop="32dp"/>
+
+
+
+
+   </LinearLayout>
 
 </FrameLayout>
